<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bravesoft.bravegogo.activity.ChangePswActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        >
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/order_back"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changePsw"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/blue"/>
        <Button
            android:id="@+id/savePsw"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="#FFCACACA"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/edit_oldPsw"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:hint="@string/oldPsw"
            android:paddingLeft="20dp"
            android:textSize="14sp"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="16"
            />
        <ImageView
            android:id="@+id/oldClear"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@mipmap/bg_clear"
            android:visibility="invisible"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/edit_newPsw"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:hint="@string/newPsw"
            android:paddingLeft="20dp"
            android:textSize="14sp"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="16"/>
        <ImageView
            android:id="@+id/newClear"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@mipmap/bg_clear"
            android:visibility="invisible"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/edit_confirmPsw"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:hint="@string/confirmPsw"
            android:paddingLeft="20dp"
            android:textSize="14sp"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="16"/>
        <ImageView
            android:id="@+id/confirmClear"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@mipmap/bg_clear"
            android:visibility="invisible"/>
    </LinearLayout>

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3E3E3"
            android:text="@string/msg"
            android:paddingTop="10dp"/>
</LinearLayout>
