<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bravesoft.bravegogo.activity.PersonalInfo">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        >
    <ImageView
        android:id="@+id/orderBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:background="@mipmap/order_back"
        android:layout_marginLeft="10dp"
        android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personalInfo"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/blue"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/line"/>
    <!--头像-->
    <LinearLayout
        android:id="@+id/llHeadImg"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/headImg"
            android:textSize="16sp"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personalHead"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/common_avatar_big"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/common_arrow"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <!--昵称-->
    <LinearLayout
        android:id="@+id/nickName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/nickName"/>
        <TextView
            android:id="@+id/nickText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/common_arrow"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <!--性别-->
    <LinearLayout
        android:id="@+id/sexual"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sexual"/>
        <TextView
            android:id="@+id/userSex"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="男"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <!--生日-->
    <LinearLayout
        android:id="@+id/birth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/birth"/>
        <TextView
            android:id="@+id/userBirth"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="1992.12.23"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/line"/>
    <!--实名认证-->
    <LinearLayout
        android:id="@+id/authentication"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/authentication"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="未认证"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/common_arrow"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <!--修改密码-->
    <LinearLayout
        android:id="@+id/changePsw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/changePsw"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/common_arrow"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/line"/>
</LinearLayout>
