<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bravesoft.bravegogo.activity.WalletActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        >
        <ImageView
            android:onClick="walletBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/order_back"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wallet"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/blue"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/line"/>
    <LinearLayout
        android:id="@+id/coupon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/coupon"/>
        <TextView
            android:id="@+id/noCoupon"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="无优惠券"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/common_arrow"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:id="@+id/deposit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/deposit"/>
        <TextView
            android:id="@+id/nickText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="未交押金"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/common_arrow"
            android:scaleType="centerCrop"/>
    </LinearLayout>
</LinearLayout>
