<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <!--主页面 -->
    <RelativeLayout
        android:id="@+id/mainReal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:onClick="startDraw"
            android:id="@+id/common_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@mipmap/common_avatar_smal"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/common_logo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:src="@drawable/common_title_logo"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/ic_activity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_activity"
            android:layout_alignBottom="@+id/common_more"
            android:layout_toLeftOf="@+id/common_more"
            android:layout_toStartOf="@+id/common_more" />
        <ImageView
            android:id="@+id/common_more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/common_more"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/hr">
            <com.baidu.mapapi.map.MapView
                android:id="@+id/mapView"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                >
            </com.baidu.mapapi.map.MapView>
            <Button
                android:background="@drawable/map_tip"
                android:id="@+id/exp"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="网络异常,点击重试"
                android:layout_above="@+id/map_pin"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/map_pin"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/map_pin"
                />
            <!--下方扫码定位-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:id="@+id/onceLocation"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:src="@mipmap/map_position_grey"
                    />

                <Button
                    android:id="@+id/btn_mapScan"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:textColor="@color/whilte"
                    android:textSize="16sp"
                    android:text="扫码解锁"
                    android:background="@drawable/mapbtn"
                    android:drawableLeft="@mipmap/map_scan"
                    android:paddingLeft="30dp"/>
                <ImageView
                    android:id="@+id/mapRefresh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/map_refresh"
                    android:visibility="invisible"/>
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
    <!--抽屉-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:background="@color/whilte">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/headImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/common_avatar_big"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
        <TextView
            android:id="@+id/phoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/line"/>
        <Button
            android:id="@+id/finish"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/finish"
            android:layout_marginTop="30dp"
            android:textColor="@color/whilte"
            android:background="@drawable/btnblue"
            android:layout_gravity="center"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/line"/>
        <Button
            android:id="@+id/btnOrder"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:drawableLeft="@mipmap/user_center_order"
            android:layout_gravity="start"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:drawablePadding="15dp"/>
        <Button
             android:id="@+id/btnWallet"
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet"
             android:drawableLeft="@mipmap/user_center_wallet"
             android:layout_gravity="start"
             android:background="@null"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:drawablePadding="15dp"/>
         <Button
             android:id="@+id/btnCredit"
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/credit"
             android:drawableLeft="@mipmap/user_center_credit"
             android:layout_gravity="start"
             android:background="@null"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:drawablePadding="15dp"/>
         <Button
             android:id="@+id/btnInvite"
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/invite"
             android:drawableLeft="@mipmap/user_center_invite"
             android:layout_gravity="start"
             android:background="@null"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:drawablePadding="15dp"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:background="@drawable/line"/>
         <Button
             android:id="@+id/btnFeedback"
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/feedback"
             android:drawableLeft="@mipmap/user_center_feedback"
             android:layout_gravity="start"
             android:background="@null"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:drawablePadding="15dp"/>
         <Button
             android:id="@+id/btnSetting"
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/setting"
             android:drawableLeft="@mipmap/user_center_setting"
             android:layout_gravity="start"
             android:background="@null"
             android:textSize="16sp"
             android:layout_marginLeft="20dp"
             android:drawablePadding="15dp"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
